# BCD-plugin-for-blender

./: BCD_Addon.py  BCD_External_Addon.py  BCD_Internal_Addon.py  CMakeLists.txt
intern/cycles/: CMakeLists.txt
intern/cycles/app/: CMakeLists.txt
intern/cycles/bcd/: CMakeLists.txt
intern/cycles/bcd/BayesianCollaborativeDenoiser/: CMakeLists.txt  Denoiser.h  DenoisingUnit.h  Launch.h  MultiscaleDenoiser.cpp  SamplesAccumulator.cpp  SamplesAccumulator.h  SpikeRemovalFilter.cpp
intern/cycles/bcd/Common/: DeepImage.h  ImageIO.cpp
intern/cycles/bcd/ext/: CMakeLists.txt
intern/cycles/blender/: blender_session.cpp  blender_session.h
intern/cycles/blender/addon/: presets.py  properties.py  ui.py
intern/cycles/device/: CMakeLists.txt  device.cpp  device.h  device_cpu.cpp  device_cuda.cpp  device_task.cpp  device_task.h
intern/cycles/device/bcd/: CMakeLists.txt
intern/cycles/device/bcd/BayesianCollaborativeDenoiser/: CMakeLists.txt  SamplesAccumulator.cpp  SamplesAccumulator.h
intern/cycles/render/: session.cpp  session.h
